# 28k-hq

./: .env.example  .gitignore  ecosystem.config.cjs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: build-desktop.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-foundation-and-identity/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  (+1 more)
.planning/research/: ARCHITECTURE.md  DISTRIBUTION-MAPPING.md  FEATURES.md  PEAK-PERFORMANCE.md  PERSONAL-OPS.md  PITFALLS.md  SOCIAL-MECHANICS.md  STACK.md  SUMMARY.md
apps/api/: package.json
apps/bot/: package.json
apps/desktop/: .env.production  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns  tray-icon.rgba
apps/desktop/src-tauri/src/: lib.rs
deploy/: post-receive
prisma/: schema.prisma
src/: deploy-commands.ts  index.ts
src/core/: client.ts  events.ts  module-loader.ts
src/db/: client.ts  encryption.ts
src/shared/: ai-client.ts  ai-templates.ts  ai-types.ts  constants.ts  crypto.ts  delivery.ts  embeds.ts
(+447 files in other folders)
